--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,10 +1,18 @@
 <main>
 	<div class="form">
 		<div class="login-form">
-			<input type="text" [(ngModel)]="username" placeholder="username" />
+			<i class="fa fa-user-circle-o fa-2x" aria-hidden="true" style="color:black;position:relative;float:left;"></i><input type="text"
+				style="position:relative;float:right;" [(ngModel)]="username" placeholder="username" />
 			<input type="password" [(ngModel)]="password" placeholder="password" />
-			<input type="text" [(ngModel)]="server" placeholder="localhost" />
-			<button (click)="login()">login</button>
+
+			<button *ngIf="alerts.length == 0" (click)="login()">login</button>
+
+			<div *ngIf="alerts.length != 0">
+				<p *ngFor="let alert of alerts">
+					<ngb-alert [type]="alert.type" (close)="closeAlert(alert)">{{ alert.message }}</ngb-alert>
+				</p>
+			</div>
+
 		</div>
 	</div>
 </main>
